servers/general-module/general-module-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: general-module-deployment
  labels:
    app: general-module-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: general-module-service
      version: v1
  template:
    metadata:
      labels:
        app: general-module-service
        version: v1
    spec:
      serviceAccountName: general-serviceaccount
      containers:
        - name: general-module-service
          image: 083118395813.dkr.ecr.ap-south-1.amazonaws.com/general-demo:latest
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
