servers/general-module/general-module-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: general-module-service
spec:
  selector:
    app: general-module
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
